[TLC 221] search navbar fixed
search navbar again closer to dspace original code. Behavior in interaction with "discover" optimized using dsClickOutside. Search field closing animation disabled because of <form [hidden]="!searchExpanded ...". If animation is desired, this attribute link has to be deleted, but an invisible search input field 24px (padding) wide will remain left to the search menu entry.

--- a/src/app/search-navbar/search-navbar.component.scss
+++ b/src/app/search-navbar/search-navbar.component.scss
@@ -1,3 +1,41 @@
+.fa-lg {
+  font-size: 1em;
+}
+
+input[type="text"] {
+  // margin-top: calc(-0.5 * var(--bs-font-size-base));
+  // border: 2px;
+  box-shadow: none;
+  border-color: #ffe600;
+
+  &:focus {
+    background-color: rgba(255, 255, 255, 0.5) !important;
+  }
+
+  &.collapsed {
+    opacity: 0;
+  }
+}
+
+a.submit-icon {
+  cursor: pointer;
+}
+
+@media screen and (max-width: map-get($grid-breakpoints, md)) {
+  .query:focus {
+    max-width: 250px !important;
+    width: 40vw !important;
+  }
+
+  a.submit-icon {
+    color: var(--bs-link-color);
+  }
+}
+
+
+
+
+/*
 input[type="text"] {
   width: 100% !important;
   margin-top: calc(-0.5 * var(--bs-font-size-base));
@@ -85,3 +123,4 @@ a.submit-icon:hover {
   top: 0;
   right: 0;
 }
+*/
